Align Navigation menu, footer and fix margin and lastly set container max-width to 2560px

--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 body{
     margin: auto;
-    background-color: gainsboro;
+    background-color: rgb(245, 245, 247);
 }
 .container{
-    max-width: 1000px;
+    max-width: 2560px;
     height: auto;
     margin: auto;
 }
@@ -13,25 +13,33 @@ img{
 }
 .head{
     background-color: rgb(73, 73, 73);
+    display: flex;
+    justify-content: center;
 }
 .logo{
     float: left;
     width: 80px;
     height: 80px;
-    padding: 15px
+    padding: 15px;
+    padding-top: 0px;
+    padding-bottom: 0px;
 }
 .search{
+    width: 210px;
     float: right;
     padding: 15px;
-    padding-top: 35px;
+    padding-top: 25px;
+}
+.nav_menu > ul{
+    width: 450px;
+    margin: 0px;
+    padding: 105px;
+    padding-top: 15px;
+    padding-bottom: 0px;
+    list-style-type: none;
 }
 .clearfix{
     clear: both;
-}
-.nav_menu > ul{
-    margin: 0px;
-    padding: 0px;
-    list-style-type: none;
 }
 .nav_menu > ul > li{
     display: inline-block;
@@ -77,6 +85,7 @@ img{
     width: 1000px;
     height: 667px;
     overflow: hidden;
+    margin: auto;
 }
 .banner img{
     width: 100%;
@@ -103,6 +112,7 @@ img{
     font-size: small;
 }
 .sidebar{
+    width: 200px;
     float: left;
     padding: 25px;
 }
@@ -129,6 +139,7 @@ img{
     width: 950px;
     height: auto;
     padding: 25px;
+    margin: auto;
 }
 .footer_box{
     width: 237.5px;
@@ -164,9 +175,10 @@ address p{
 /**copyright**/
 .copy {
     font-family: sans-serif;
-    padding: 25px;
+    padding: 0px;
     text-align: center;
+    background-color: azure;
 }
 .copy p{
-    margin: 0px;
+    margin: auto;
 }
